<resources>
    <string name="app_name">My Task Manager</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="developer_name">Fernando Quilez Esquitino</string>
    <string name="developer_email">ferquies@gmail.com</string>

    <string name="today">Today</string>
    <string name="week">Week</string>

    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>

    <string name="task">Task</string>
    <string name="description">Description</string>
    <string name="create_task">Create Task</string>
    <string name="cancel">Cancel</string>
</resources>
