<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_today"
            android:checked="true"
            android:actionLayout="@layout/fragment_today"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/today" />
        <item
            android:id="@+id/nav_week"
            android:actionLayout="@layout/fragment_week"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/week" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="@string/send" />
        </menu>
    </item>

</menu>
